plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.2'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.spring-security-3-with-thymeleaf'
version = '0.0.1'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

//	cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation group: 'org.ehcache', name: 'ehcache', version: '3.10.8'
	implementation 'javax.cache:cache-api'

//	aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

//	session
	implementation 'org.springframework.session:spring-session-core'
//	implementation 'org.springframework.session:spring-session-jdbc'

	implementation group: 'org.webjars', name: 'bootstrap', version: '4.4.1'
	implementation group: 'org.webjars', name: 'font-awesome', version: '5.11.2'
	implementation group: 'org.webjars.npm', name: 'chart.js', version: '2.9.3'

//	pdf
	implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.3'
	implementation group: 'com.itextpdf.tool', name: 'xmlworker', version: '5.5.13.3'

//	microsoft word, excel
	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'

//	QR code / bar code
	implementation group: 'com.google.zxing', name: 'core', version: '3.5.1'
	implementation group: 'com.google.zxing', name: 'javase', version: '3.5.1'


	compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	runtimeOnly 'com.mysql:mysql-connector-j'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}